WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112127
[Texmap] Memory leak when closing tab
https://bugs.webkit.org/show_bug.cgi?id=112127
Summary
[Texmap] Memory leak when closing tab
Hurnjoo Lee
Reported
2013-03-12 03:34:37 PDT
When closing tab, CoordinatedGraphicsScene object is not freed because reference count of object is not zero.
Attachments
proposed patch
(1.69 KB, application/octet-stream)
2013-03-12 03:41 PDT
,
Hurnjoo Lee
no flags
Details
proposed patch
(1.69 KB, patch)
2013-03-12 03:42 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
new patch
(1.69 KB, patch)
2013-03-12 03:47 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
new patch
(1.71 KB, application/octet-stream)
2013-03-12 03:49 PDT
,
Hurnjoo Lee
no flags
Details
new patch
(1.71 KB, patch)
2013-03-12 03:50 PDT
,
Hurnjoo Lee
noam
: review+
noam
: commit-queue-
Details
Formatted Diff
Diff
patch
(1.70 KB, patch)
2013-03-12 18:08 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
fixed patch
(1.70 KB, patch)
2013-03-24 16:59 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Hurnjoo Lee
Comment 1
2013-03-12 03:41:08 PDT
Created
attachment 192696
[details]
proposed patch
Hurnjoo Lee
Comment 2
2013-03-12 03:42:19 PDT
Created
attachment 192697
[details]
proposed patch
WebKit Review Bot
Comment 3
2013-03-12 03:45:22 PDT
Attachment 192696
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsScene.cpp']" exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hurnjoo Lee
Comment 4
2013-03-12 03:47:38 PDT
Created
attachment 192699
[details]
new patch
Hurnjoo Lee
Comment 5
2013-03-12 03:49:09 PDT
Created
attachment 192700
[details]
new patch
Hurnjoo Lee
Comment 6
2013-03-12 03:50:30 PDT
Created
attachment 192701
[details]
new patch
JungJik Lee
Comment 7
2013-03-12 04:57:46 PDT
good! but we still have some accumulation of unused memory.
Noam Rosenthal
Comment 8
2013-03-12 10:32:20 PDT
Comment on
attachment 192701
[details]
new patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192701&action=review
> Source/WebCore/ChangeLog:9 > + When closing tab, if there is any updates in renderQueue of > + CoordinatedGraphicsScene, m_scene(CoordinatedGraphicsScene) is not freed because
When closing a tab, if there are any updates pending in CoordinatedGraphicsScene's render queue, the scene is not freed because
Hurnjoo Lee
Comment 9
2013-03-12 18:08:10 PDT
Created
attachment 192845
[details]
patch
Hurnjoo Lee
Comment 10
2013-03-12 18:09:24 PDT
(In reply to
comment #8
)
> (From update of
attachment 192701
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=192701&action=review
> > > Source/WebCore/ChangeLog:9 > > + When closing tab, if there is any updates in renderQueue of > > + CoordinatedGraphicsScene, m_scene(CoordinatedGraphicsScene) is not freed because > > When closing a tab, if there are any updates pending in CoordinatedGraphicsScene's render queue, the scene is not freed because
Fixed. Thanks for the review.
Hurnjoo Lee
Comment 11
2013-03-24 16:59:15 PDT
Created
attachment 194773
[details]
fixed patch
WebKit Review Bot
Comment 12
2013-03-25 01:48:01 PDT
Comment on
attachment 194773
[details]
fixed patch Clearing flags on attachment: 194773 Committed
r146747
: <
http://trac.webkit.org/changeset/146747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug