third_party/WebKit/Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsScene.cpp
@@ -742,6 +742,7 @@ void CoordinatedGraphicsScene::setAnimationsLocked(bool locked)
 void CoordinatedGraphicsScene::detach()
 {
     ASSERT(isMainThread());
+    m_renderQueue.clear();
     m_client = 0;
 }
 
